# mdglasses

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
scripts/: install-deps-linux.sh  run-release.sh
src/: codeBlockCopy.ts  highlight.test.ts  highlight.ts  keyboardNavigation.test.ts  keyboardNavigation.ts  loading.css  loading.ts  main.test.ts  main.ts  navigationHistory.ts  notifications.css  notifications.test.ts  pathUtils.test.ts  pathUtils.ts  styles.css  tauriApi.test.ts  tauriApi.ts  theme.test.ts  theme.ts  treePanel.test.ts  treePanel.ts  types.ts  ui.test.ts  ui.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  markdown.rs  obsidian_embed.rs  wiki.rs
src-tauri/src/app/: commands.rs  mod.rs  state.rs  types.rs  watch.rs
src-tauri/src/obsidian_embed/: cache.rs  index.rs  mod.rs  parse.rs  render.rs  resolve.rs
src/core/: api.test.ts  api.ts
src/features/content/: codeBlockCopy.ts  contentRendering.ts  linkHandler.ts
src/features/keyboard/: keyboardNavigation.ts
src/features/navigation/: documentLoader.ts  navigationHistory.test.ts
src/features/open/: openModal.ts
src/features/theme/: theme.test.ts  theme.ts
src/features/tree/: treePanel.test.ts  treePanel.ts
src/ui/: loading.test.ts  notifications.ts  shell.test.ts
