[package]
name = "mdglasses"
version = "0.1.0"
description = "Cross-platform Markdown viewer (GitHub-like)"
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "mdglasses_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = "0.25"
notify = "6"
notify-debouncer-full = "0.3"

[dev-dependencies]
tempfile = "3"
